<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.loonies.exercisemanager.OxyPage"
    android:background="@color/back_green"
    android:weightSum="1">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:text="@string/edittext_item"
        android:textSize="@dimen/title_text"
        android:gravity="center"/>
    <EditText
        android:id="@+id/text_item_strn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:singleLine="true"
        android:background="@color/black_overlay"
        android:hint="@string/edittext_item_hint"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:text="@string/edittext_prop"
        android:textSize="@dimen/title_text"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:orientation="horizontal"
        >
        <EditText
            android:id="@+id/text_weight"
            android:layout_marginLeft="40dp"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/item_height"
            android:background="@color/black_overlay"
            android:hint="@string/edittext_weight_hint"
            android:numeric="integer"
            android:singleLine="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/item_height"
            android:text="@string/edittext_kg"
            android:textSize="@dimen/title_text"
            />
        <EditText
            android:id="@+id/text_number"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/item_height"
            android:background="@color/black_overlay"
            android:hint="@string/edittext_number_hint"
            android:numeric="integer"
            android:singleLine="true"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height"
            android:text="@string/edittext_number"
            android:textSize="@dimen/title_text"
            />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:text="@string/edittext_groups"
        android:textSize="@dimen/title_text"
        android:gravity="center"/>
    <EditText
        android:id="@+id/text_groups_strn"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/item_height"
        android:background="@color/black_overlay"
        android:hint="@string/edittext_groups_hint"
        android:numeric="integer"
        android:singleLine="true"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:text="@string/edittext_date"
        android:textSize="@dimen/title_text"
        android:gravity="center"/>
    <ImageButton
        android:id="@+id/strn_set_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/date_btn"
        android:layout_gravity="center"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="0dp">
        <ImageButton
            android:id="@+id/strn_cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/cancel_btn"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <ImageButton
            android:id="@+id/strn_save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/save_btn"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

</LinearLayout>
