<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="250dp"
    android:background="@color/dialog_bg"
    android:padding="12dip">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_page_text"
        android:gravity="center_horizontal"
        android:textColor="@color/dialog_text"
        android:paddingBottom="12dip"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/edittext_item"
            android:textSize="@dimen/title_btn" />
        <EditText
            android:id="@+id/item_name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:numeric="integer"
            android:singleLine="true"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/edittext_prop"
            android:textSize="@dimen/title_btn"
            android:layout_weight="1"/>
        <EditText
            android:id="@+id/item_weight_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:numeric="integer"
            android:singleLine="true"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/edittext_kg"
            android:layout_weight="1"/>
        <EditText
            android:id="@+id/item_number_edit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:numeric="integer"
            android:singleLine="true"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/edittext_number"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textSize="@dimen/title_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/edittext_groups"
            android:layout_weight="1"/>
        <EditText
            android:id="@+id/item_groups_edit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:numeric="integer"
            android:singleLine="true"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/edit_cancel_text"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/edit_save_text"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>
</LinearLayout>
