<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/back_green"
    android:orientation="vertical"
    tools:context="com.loonies.exercisemanager.PlanPage">
    <RelativeLayout
        android:layout_marginTop="0dp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height">
        <Button
            android:id="@+id/review_btn"
            android:text="@string/review_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="@dimen/title_text"
            android:gravity="center"
            android:text="@string/todayplan_text"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />
        <Button
            android:id="@+id/addplan_btn"
            android:text="@string/addplan_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:onClick="addPlan"/>
    </RelativeLayout>
    <ListView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/listvb_bg"
        android:divider="@drawable/list_bd"
        android:dividerHeight="4dp"></ListView>

</LinearLayout>
