<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/back_green"
    android:orientation="vertical"
    tools:context="com.loonies.exercisemanager.ExerciseRecordingPage">
    <Button
        android:id="@+id/set_timer_btn"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/item_height"
        android:text="@string/btn_rst_timer"
        android:textSize="@dimen/title_btn"
        android:background="@color/letter_green"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="@dimen/item_height"
        android:text="@string/exc_rcd_hnt"
        android:textSize="@dimen/title_text"
        android:gravity="center"/>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <Button
            android:id="@+id/exc_done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/done_button"
            android:onClick="finishExc"/>
        <ListView
            android:id="@+id/list_view3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/listvb_bg"
            android:divider="@drawable/list_bd"
            android:dividerHeight="4dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_above="@id/exc_done"></ListView>
    </RelativeLayout>
</LinearLayout>
